--- a/index.html
+++ b/index.html
@@ -69,6 +69,39 @@
             <h2>Deslize com elegância e conquiste a vitória com a nossa coleção exclusiva de tênis.</h2>
         </div>
     </section>
+    <section id="calcados">
+        <div class="h2-esportes">
+            <h2>Nossas Marcas</h2>
+        </div>
+        <p>Descubra a combinação perfeita de conforto e design para brilhar nas quadras!</p>
+        <div class="container">
+            <div class="tenis">
+            <img src="./images/tenis-1.png" alt="">
+            <button>Adicionar ao carrinho</button>
+            </div>
+            <div class="tenis">
+            <img src="./images/tenis-2.png" alt="">
+            <button>Adicionar ao carrinho</button>
+            </div>
+            <div class="tenis">
+            <img src="./images/tenis-3.png" alt="">
+            <button>Adicionar ao carrinho</button>
+            </div>
+            <div class="tenis">
+            <img src="./images/tenis-4.png" alt="">
+            <button>Adicionar ao carrinho</button>
+            </div>
+            <div class="tenis">
+            <img src="./images/tenis-5.png" alt="">
+            <button>Adicionar ao carrinho</button>
+            </div>
+            <div class="tenis">
+            <img src="./images/tenis-6.png" alt="">
+            <button>Adicionar ao carrinho</button>
+            </div>
+            
+        </div>
+    </section>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
