Melhorando a sessão de tenis

--- a/index.html
+++ b/index.html
@@ -76,28 +76,40 @@
         <p>Descubra a combinação perfeita de conforto e design para brilhar nas quadras!</p>
         <div class="container">
             <div class="tenis">
-            <img src="./images/tenis-1.png" alt="">
-            <button>Adicionar ao carrinho</button>
+                <span>
+                    <img src="./images/tenis-1.png" alt="">
+                </span>
+                    <button>Adicionar ao carrinho</button>
             </div>
             <div class="tenis">
-            <img src="./images/tenis-2.png" alt="">
-            <button>Adicionar ao carrinho</button>
+                <span>
+                    <img src="./images/tenis-2.png" alt="">
+                </span>
+                    <button>Adicionar ao carrinho</button>
             </div>
             <div class="tenis">
-            <img src="./images/tenis-3.png" alt="">
-            <button>Adicionar ao carrinho</button>
+                <span>
+                    <img src="./images/tenis-3.png" alt="">
+                </span>
+                    <button>Adicionar ao carrinho</button>
             </div>
             <div class="tenis">
-            <img src="./images/tenis-4.png" alt="">
-            <button>Adicionar ao carrinho</button>
+                <span>
+                    <img src="./images/tenis-4.png" alt="">
+                </span>
+                    <button>Adicionar ao carrinho</button>
             </div>
             <div class="tenis">
-            <img src="./images/tenis-5.png" alt="">
-            <button>Adicionar ao carrinho</button>
+                <span>
+                    <img src="./images/tenis-5.png" alt="">
+                </span>
+                    <button>Adicionar ao carrinho</button>
             </div>
             <div class="tenis">
-            <img src="./images/tenis-6.png" alt="">
-            <button>Adicionar ao carrinho</button>
+                <span>
+                    <img src="./images/tenis-6.png" alt="">
+                </span>
+                    <button>Adicionar ao carrinho</button>
             </div>
             
         </div>
