Estilizando os tenis

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="#marcas">Marcas</a>
                 </li>
                 <li>
-                    <a href="#">Calçados</a>
+                    <a href="#calcados">Calçados</a>
                 </li>
                 <li>
                     <a href="#">Acessórios</a>
@@ -71,9 +71,8 @@
     </section>
     <section id="calcados">
         <div class="h2-esportes">
-            <h2>Nossas Marcas</h2>
+            <h2>Encontre o par que se encaixa perfeitamente no seu estilo.</h2>
         </div>
-        <p>Descubra a combinação perfeita de conforto e design para brilhar nas quadras!</p>
         <div class="container">
             <div class="tenis">
                 <span>
