--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="#calcados">Calçados</a>
                 </li>
                 <li>
-                    <a href="#">Acessórios</a>
+                    <a href="#acessorios">Acessórios</a>
                 </li>
                 <ion-icon name="cart-outline"></ion-icon>
             </ul>
@@ -113,6 +113,87 @@
             
         </div>
     </section>
+    <section id="acessorios">
+        <div class="h2-esportes">
+            <h2>O seu jogo, o nosso compromisso!</h2>
+        </div>
+        <div class="container">
+            <div class="acessorios">
+                <span>
+                    <img src="./images/acessorio-1.png" alt="">
+                </span>
+                    <button>Adicionar ao carrinho</button>
+            </div>
+            <div class="acessorios">
+                <span>
+                    <img src="./images/acessorio-2.png" alt="">
+                </span>
+                    <button>Adicionar ao carrinho</button>
+            </div>
+            <div class="acessorios">
+                <span>
+                    <img src="./images/acessorio-3.png" alt="">
+                </span>
+                    <button>Adicionar ao carrinho</button>
+            </div>
+            <div class="acessorios">
+                <span>
+                    <img src="./images/acessorio-4.png" alt="">
+                </span>
+                    <button>Adicionar ao carrinho</button>
+            </div>
+            <div class="acessorios">
+                <span>
+                    <img src="./images/acessorio-5.png" alt="">
+                </span>
+                    <button>Adicionar ao carrinho</button>
+            </div>
+            <div class="acessorios">
+                <span>
+                    <img src="./images/acessorio-6.png" alt="">
+                </span>
+                    <button>Adicionar ao carrinho</button>
+            </div>
+            
+        </div>
+    </section>
+    <footer>
+        <div class="h2-esportes">
+        </div>
+        <div class="container">
+            <div>
+            <h2>RUNN</h2>
+            <li>
+                <a href="#">Nós envie uma mensagem</a>
+            </li>
+            </div>
+            <div class="explore">
+                <h2>EXPLORE</h2>
+                <li>
+                    <a href="#esportes">Esportes</a>
+                </li>
+                <li>
+                    <a href="#marcas">Marcas</a>
+                </li>
+                <li>
+                    <a href="#calcados">Calçados</a>
+                </li>
+                <li>
+                    <a href="#acessorios">Acessórios</a>
+                </li>
+            </div>
+            <div>
+                <h2>REDES SOCIAIS</h2>
+                <li>
+                    <a href="#">Linkedln</a>
+                </li>
+                <li>
+                    <a href="#">GitHub</a>
+                </li>
+            </div>
+        </div>
+        <p>Copyright © Todos os direitos reservados - Antônio Pinheiro</p>
+    </footer>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
