--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <link rel="stylesheet" href="./src/styles/main.css">
 </head>
 <body>
+    <!--BACKGROUND IMAGE-->
     <div class="background-image">
         <img src="./images/pexels-godisable-jacob-963696.jpg" alt="" width="1074px" height="587">
     </div>
+    <!--HEADER-->
     <header class="header">
         <div>
             <img src="./images/Icone_tenis_run_borda-removebg-preview.png" alt="RUNN Logo" width="100px">
@@ -35,6 +37,7 @@
             </ul>
         </nav>
     </header>
+    <!--SESSÃO HOME-->
     <main>
         <div class="container-home">
             <h1>Explore o mundo com estilo 
@@ -42,6 +45,7 @@
             <p>Encontre os melhores calçados para elevar o seu jogo no nosso site!</p>
         </div>
     </main>
+    <!--SESSÃO ESPORTES-->
     <section id="esportes">
         <div class="h2-esportes">
             <h2>A paixão pelo esporte se traduz em cada par de calçados. </h2>
@@ -52,6 +56,7 @@
             <img src="./images/esportes-3.png" alt="">
         </div>
     </section>
+    <!--SESSÃO MARCAS-->
     <section id="marcas">
         <div class="h2-esportes">
             <h2>Nossas Marcas</h2>
@@ -64,11 +69,14 @@
             <img src="./images/marca-4.png" alt="">
         </div>
     </section>
+    <!--SESSÃO FOTO DE FUNDO ELEGANCIA-->
     <section id="elegancia">
         <div class="h2-esportes">
             <h2>Deslize com elegância e conquiste a vitória com a nossa coleção exclusiva de tênis.</h2>
         </div>
     </section>
+
+    <!--SESSÃO CALÇADOS-->
     <section id="calcados">
         <div class="h2-esportes">
             <h2>Encontre o par que se encaixa perfeitamente no seu estilo.</h2>
@@ -78,85 +86,100 @@
                 <span>
                     <img src="./images/tenis-1.png" alt="">
                 </span>
+                <p>R$ 189,90</p>
                     <button>Adicionar ao carrinho</button>
             </div>
             <div class="tenis">
                 <span>
                     <img src="./images/tenis-2.png" alt="">
                 </span>
+                <p>R$ 249,90</p>
                     <button>Adicionar ao carrinho</button>
             </div>
             <div class="tenis">
                 <span>
                     <img src="./images/tenis-3.png" alt="">
                 </span>
+                <p>R$ 229,90</p>
                     <button>Adicionar ao carrinho</button>
             </div>
             <div class="tenis">
                 <span>
                     <img src="./images/tenis-4.png" alt="">
                 </span>
+                <p>R$ 159,90</p>
                     <button>Adicionar ao carrinho</button>
             </div>
             <div class="tenis">
                 <span>
                     <img src="./images/tenis-5.png" alt="">
                 </span>
+                <p>R$ 189,90</p>
                     <button>Adicionar ao carrinho</button>
             </div>
             <div class="tenis">
                 <span>
                     <img src="./images/tenis-6.png" alt="">
                 </span>
+                <p>R$ 289,90</p>
                     <button>Adicionar ao carrinho</button>
             </div>
-            
         </div>
     </section>
+
+    <!--SESSÃO ACESSÓRIOS-->
     <section id="acessorios">
         <div class="h2-esportes">
-            <h2>O seu jogo, o nosso compromisso!</h2>
+            <h2>O seu jogo, o nosso compromisso!</span></h2>
         </div>
         <div class="container">
             <div class="acessorios">
                 <span>
                     <img src="./images/acessorio-1.png" alt="">
                 </span>
+                <p>R$ 89,90</p>
                     <button>Adicionar ao carrinho</button>
             </div>
             <div class="acessorios">
                 <span>
                     <img src="./images/acessorio-2.png" alt="">
                 </span>
+                <p>R$ 99,90</p>
                     <button>Adicionar ao carrinho</button>
             </div>
             <div class="acessorios">
                 <span>
                     <img src="./images/acessorio-3.png" alt="">
                 </span>
+                <p>R$ 69,90</p>
                     <button>Adicionar ao carrinho</button>
             </div>
             <div class="acessorios">
                 <span>
                     <img src="./images/acessorio-4.png" alt="">
                 </span>
+                <p>R$ 129,90</p>
                     <button>Adicionar ao carrinho</button>
             </div>
             <div class="acessorios">
                 <span>
                     <img src="./images/acessorio-5.png" alt="">
                 </span>
+                <p>R$ 69,90</p>
                     <button>Adicionar ao carrinho</button>
             </div>
             <div class="acessorios">
                 <span>
                     <img src="./images/acessorio-6.png" alt="">
                 </span>
+                <p>R$ 199,90</p>
                     <button>Adicionar ao carrinho</button>
             </div>
             
         </div>
     </section>
+
+    <!--FOOTER-->
     <footer>
         <div class="h2-esportes">
         </div>
@@ -164,7 +187,7 @@
             <div>
             <h2>RUNN</h2>
             <li>
-                <a href="#">Nós envie uma mensagem</a>
+                <a href="https://api.whatsapp.com/send?phone=71984652983&text=Ol%C3%A1!%20Estou%20interessado%20em%20discutir%20um%20projeto%20de%20desenvolvimento%20web.%20Podemos%20conversar%20mais%20sobre%20suas%20habilidades%20e%20experi%C3%AAncia?" target="_blank">Nós envie uma mensagem</a>
             </li>
             </div>
             <div class="explore">
@@ -185,15 +208,17 @@
             <div>
                 <h2>REDES SOCIAIS</h2>
                 <li>
-                    <a href="#">Linkedln</a>
+                    <a href="https://www.linkedin.com/in/ant%C3%B4nio-front-end-dev/" target="_blank">Linkedln</a>
                 </li>
                 <li>
-                    <a href="#">GitHub</a>
+                    <a href="https://github.com/acpinheirox" target="_blank">GitHub</a>
                 </li>
             </div>
         </div>
         <p>Copyright © Todos os direitos reservados - Antônio Pinheiro</p>
     </footer>
+    <!--SCRIPT-->
+    <script src="./scripts/main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
