--- a/index.html
+++ b/index.html
@@ -36,6 +36,27 @@
                 <ion-icon name="cart-outline"></ion-icon>
             </ul>
         </nav>
+        <div class="cart">
+            <h2 class="cart-title">Seu Carrinho</h2>
+            <div class="cart-content">
+                <div class="cart-box">
+                    <img src="./images/tenis-1.png" alt="" class="cart-img" width="100px">
+                    <div class="detail-box">
+                        <div class="cart-product-title">Tenis Nike</div>
+                        <div class="cart-price">R$ 189,90</div>
+                        <input type="number" value="1" class="cart-quantity">
+                    </div>
+                    <ion-icon name="trash-outline cart-remove"></ion-icon>
+                </div>
+            </div>
+            <div class="total">
+                <div class="total-title">Total</div>
+                <div class="total-price">0$</div>
+            </div>
+            <button type="button" class="btn-buy">Compre Agora</button>
+
+            <ion-icon name="close-outline" id="close-cart"></ion-icon>
+        </div>
     </header>
     <!--SESSÃO HOME-->
     <main>
