--- a/index.html
+++ b/index.html
@@ -33,24 +33,24 @@
                 <li>
                     <a href="#acessorios">Acessórios</a>
                 </li>
-                <ion-icon name="cart-outline"></ion-icon>
+                <ion-icon name="cart-outline" id="cart-icon"></ion-icon>
             </ul>
         </nav>
         <div class="cart">
             <h2 class="cart-title">Seu Carrinho</h2>
             <div class="cart-content">
                 <div class="cart-box">
-                    <img src="./images/tenis-1.png" alt="" class="cart-img" width="100px">
+                    <img src="./images/tenis-1.png" alt="" class="cart-img" width="100px" height="100px">
                     <div class="detail-box">
                         <div class="cart-product-title">Tenis Nike</div>
                         <div class="cart-price">R$ 189,90</div>
                         <input type="number" value="1" class="cart-quantity">
                     </div>
-                    <ion-icon name="trash-outline cart-remove"></ion-icon>
+                    <ion-icon name="trash-outline" class="cart-remove"></ion-icon>
                 </div>
             </div>
             <div class="total">
-                <div class="total-title">Total</div>
+                <div class="total-title">Total:</div>
                 <div class="total-price">0$</div>
             </div>
             <button type="button" class="btn-buy">Compre Agora</button>
