--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <img src="./images/tenis-1.png" alt="" class="cart-img" width="100px" height="100px">
                     <div class="detail-box">
                         <div class="cart-product-title">Tenis Nike</div>
-                        <div class="cart-price">R$ 189,90</div>
+                        <div class="cart-price">R$ 189.90</div>
                         <input type="number" value="1" class="cart-quantity">
                     </div>
                     <ion-icon name="trash-outline" class="cart-remove"></ion-icon>
@@ -51,7 +51,7 @@
             </div>
             <div class="total">
                 <div class="total-title">Total:</div>
-                <div class="total-price">0$</div>
+                <div class="total-price">R$ 0</div>
             </div>
             <button type="button" class="btn-buy">Compre Agora</button>
 
@@ -108,42 +108,42 @@
                     <img src="./images/tenis-1.png" alt="">
                 </span>
                 <p>R$ 189,90</p>
-                    <button>Adicionar ao carrinho</button>
+                    <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             <div class="tenis">
                 <span>
                     <img src="./images/tenis-2.png" alt="">
                 </span>
                 <p>R$ 249,90</p>
-                    <button>Adicionar ao carrinho</button>
+                    <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             <div class="tenis">
                 <span>
                     <img src="./images/tenis-3.png" alt="">
                 </span>
                 <p>R$ 229,90</p>
-                    <button>Adicionar ao carrinho</button>
+                    <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             <div class="tenis">
                 <span>
                     <img src="./images/tenis-4.png" alt="">
                 </span>
                 <p>R$ 159,90</p>
-                    <button>Adicionar ao carrinho</button>
+                    <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             <div class="tenis">
                 <span>
                     <img src="./images/tenis-5.png" alt="">
                 </span>
                 <p>R$ 189,90</p>
-                    <button>Adicionar ao carrinho</button>
+                    <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             <div class="tenis">
                 <span>
                     <img src="./images/tenis-6.png" alt="">
                 </span>
                 <p>R$ 289,90</p>
-                    <button>Adicionar ao carrinho</button>
+                    <button class="add-cart">Adicionar ao carrinho</button>
             </div>
         </div>
     </section>
@@ -159,42 +159,42 @@
                     <img src="./images/acessorio-1.png" alt="">
                 </span>
                 <p>R$ 89,90</p>
-                    <button>Adicionar ao carrinho</button>
+                    <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             <div class="acessorios">
                 <span>
                     <img src="./images/acessorio-2.png" alt="">
                 </span>
                 <p>R$ 99,90</p>
-                    <button>Adicionar ao carrinho</button>
+                    <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             <div class="acessorios">
                 <span>
                     <img src="./images/acessorio-3.png" alt="">
                 </span>
                 <p>R$ 69,90</p>
-                    <button>Adicionar ao carrinho</button>
+                    <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             <div class="acessorios">
                 <span>
                     <img src="./images/acessorio-4.png" alt="">
                 </span>
                 <p>R$ 129,90</p>
-                    <button>Adicionar ao carrinho</button>
+                    <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             <div class="acessorios">
                 <span>
                     <img src="./images/acessorio-5.png" alt="">
                 </span>
                 <p>R$ 69,90</p>
-                    <button>Adicionar ao carrinho</button>
+                    <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             <div class="acessorios">
                 <span>
                     <img src="./images/acessorio-6.png" alt="">
                 </span>
                 <p>R$ 199,90</p>
-                    <button>Adicionar ao carrinho</button>
+                    <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             
         </div>
