--- a/index.html
+++ b/index.html
@@ -105,43 +105,49 @@
         <div class="container">
             <div class="tenis">
                 <span>
-                    <img src="./images/tenis-1.png" alt="">
-                </span>
+                    <img src="./images/tenis-1.png" alt="" class="product-img">
+                 </span>
+                <h3 class="product-title">Tênis Nike Red</h3>
                 <p>R$ 189,90</p>
                     <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             <div class="tenis">
                 <span>
-                    <img src="./images/tenis-2.png" alt="">
+                    <img src="./images/tenis-2.png" alt="" class="product-img">             
                 </span>
+                <h3 class="product-title">Tênis Adidas Red</h3>
                 <p>R$ 249,90</p>
                     <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             <div class="tenis">
                 <span>
-                    <img src="./images/tenis-3.png" alt="">
+                    <img src="./images/tenis-3.png" alt="" class="product-img">             
                 </span>
+                <h3 class="product-title">Tênis Umbro White</h3>
                 <p>R$ 229,90</p>
                     <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             <div class="tenis">
                 <span>
-                    <img src="./images/tenis-4.png" alt="">
+                    <img src="./images/tenis-4.png" alt="" class="product-img">             
                 </span>
+                <h3 class="product-title">Tênis Converse Green</h3>
                 <p>R$ 159,90</p>
                     <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             <div class="tenis">
                 <span>
-                    <img src="./images/tenis-5.png" alt="">
+                    <img src="./images/tenis-5.png" alt="" class="product-img">             
                 </span>
+                <h3 class="product-title">Tênis Converse Red</h3>
                 <p>R$ 189,90</p>
                     <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             <div class="tenis">
                 <span>
-                    <img src="./images/tenis-6.png" alt="">
+                    <img src="./images/tenis-6.png" alt="" class="product-img">             
                 </span>
+                <h3 class="product-title">Tênis Nike Blue</h3>
                 <p>R$ 289,90</p>
                     <button class="add-cart">Adicionar ao carrinho</button>
             </div>
@@ -156,43 +162,49 @@
         <div class="container">
             <div class="acessorios">
                 <span>
-                    <img src="./images/acessorio-1.png" alt="">
+                    <img src="./images/acessorio-1.png" alt="" class="product-img">
                 </span>
+                <h3 class="product-title">Bola de futebol</h3>
                 <p>R$ 89,90</p>
                     <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             <div class="acessorios">
                 <span>
-                    <img src="./images/acessorio-2.png" alt="">
+                    <img src="./images/acessorio-2.png" alt="" class="product-img">
                 </span>
+                <h3 class="product-title">Bola de basquete</h3>
                 <p>R$ 99,90</p>
                     <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             <div class="acessorios">
                 <span>
-                    <img src="./images/acessorio-3.png" alt="">
+                    <img src="./images/acessorio-3.png" alt="" class="product-img">
                 </span>
+                <h3 class="product-title">Bola de vôlei</h3>
                 <p>R$ 69,90</p>
                     <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             <div class="acessorios">
                 <span>
-                    <img src="./images/acessorio-4.png" alt="">
+                    <img src="./images/acessorio-4.png" alt="" class="product-img">
                 </span>
+                <h3 class="product-title">Bolsa da Nike</h3>
                 <p>R$ 129,90</p>
                     <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             <div class="acessorios">
                 <span>
-                    <img src="./images/acessorio-5.png" alt="">
+                    <img src="./images/acessorio-5.png" alt="" class="product-img">
                 </span>
+                <h3 class="product-title">Boné da Nike</h3>
                 <p>R$ 69,90</p>
                     <button class="add-cart">Adicionar ao carrinho</button>
             </div>
             <div class="acessorios">
                 <span>
-                    <img src="./images/acessorio-6.png" alt="">
+                    <img src="./images/acessorio-6.png" alt="" class="product-img">
                 </span>
+                <h3 class="product-title">Bolsa da Adidas</h3>
                 <p>R$ 199,90</p>
                     <button class="add-cart">Adicionar ao carrinho</button>
             </div>
