Deixando o site responsivo

--- a/index.html
+++ b/index.html
@@ -95,52 +95,53 @@
         </div>
         <div class="container">
             <div class="tenis">
-                <span>
+                <div class="product-box">
                     <img src="./images/tenis-1.png" alt="" class="product-img">
-                 </span>
-                <h3 class="product-title">Tênis Nike Red</h3>
-                <p>R$ 189,90</p>
-                    <button class="add-cart">Adicionar ao carrinho</button>
+                        <h3 class="product-title">TÊNIS NIKE RED</h3>
+                        <span class="price">R$ 189,90</span>
+                    <ion-icon name="bag-outline" class="add-cart"></ion-icon>
+                </div>
             </div>
             <div class="tenis">
-                <span>
+                <div class="product-box">
                     <img src="./images/tenis-2.png" alt="" class="product-img">             
-                </span>
-                <h3 class="product-title">Tênis Adidas Red</h3>
-                <p>R$ 249,90</p>
-                    <button class="add-cart">Adicionar ao carrinho</button>
+                <h3 class="product-title">TÊNIS ADIDAS RED</h3>
+                <span class="price">R$ 249,90</span>
+                <ion-icon name="bag-outline" class="add-cart"></ion-icon>
+                </div>
             </div>
             <div class="tenis">
-                <span>
+                <div class="product-box">
                     <img src="./images/tenis-3.png" alt="" class="product-img">             
-                </span>
-                <h3 class="product-title">Tênis Umbro White</h3>
-                <p>R$ 229,90</p>
-                    <button class="add-cart">Adicionar ao carrinho</button>
+                
+                <h3 class="product-title">TÊNIS UMBRO WHITE</h3>
+                <span class="price">R$ 229,90</span>
+                <ion-icon name="bag-outline" class="add-cart"></ion-icon>
+                </div>
             </div>
             <div class="tenis">
-                <span>
+                <div class="product-box">
                     <img src="./images/tenis-4.png" alt="" class="product-img">             
-                </span>
-                <h3 class="product-title">Tênis Converse Green</h3>
-                <p>R$ 159,90</p>
-                    <button class="add-cart">Adicionar ao carrinho</button>
+                    <h3 class="product-title">TÊNIS CONVERSE</h3>
+                <span class="price">R$ 159,90</span>
+                <ion-icon name="bag-outline" class="add-cart"></ion-icon>
+                </div>
             </div>
             <div class="tenis">
-                <span>
+                <div class="product-box">
                     <img src="./images/tenis-5.png" alt="" class="product-img">             
-                </span>
-                <h3 class="product-title">Tênis Converse Red</h3>
-                <p>R$ 189,90</p>
-                    <button class="add-cart">Adicionar ao carrinho</button>
+                    <h3 class="product-title">TÊNIS CONVERSE</h3>
+                <span class="price">R$ 189,90</span>
+                <ion-icon name="bag-outline" class="add-cart"></ion-icon>
+                </div>
             </div>
             <div class="tenis">
-                <span>
+                <div class="product-box">
                     <img src="./images/tenis-6.png" alt="" class="product-img">             
-                </span>
-                <h3 class="product-title">Tênis Nike Blue</h3>
-                <p>R$ 289,90</p>
-                    <button class="add-cart">Adicionar ao carrinho</button>
+                        <h3 class="product-title">TÊNIS NIKE BLUE</h3>
+                        <span class="price">R$ 289,90</span>
+                    <ion-icon name="bag-outline" class="add-cart"></ion-icon>
+                </div>
             </div>
         </div>
     </section>
@@ -152,52 +153,52 @@
         </div>
         <div class="container">
             <div class="acessorios">
-                <span>
+                <div class="product-box">
                     <img src="./images/acessorio-1.png" alt="" class="product-img">
-                </span>
-                <h3 class="product-title">Bola de futebol</h3>
-                <p>R$ 89,90</p>
-                    <button class="add-cart">Adicionar ao carrinho</button>
+                        <h3 class="product-title">BOLA DE FUTEBOL</h3>
+                        <span class="price">R$ 89,90</span>
+                    <ion-icon name="bag-outline" class="add-cart"></ion-icon>
+                </div>
             </div>
             <div class="acessorios">
-                <span>
+                <div class="product-box">
                     <img src="./images/acessorio-2.png" alt="" class="product-img">
-                </span>
-                <h3 class="product-title">Bola de basquete</h3>
-                <p>R$ 99,90</p>
-                    <button class="add-cart">Adicionar ao carrinho</button>
+                        <h3 class="product-title">BOLA DE BASQUETE</h3>
+                        <span class="price">R$ 99,90</span>
+                    <ion-icon name="bag-outline" class="add-cart"></ion-icon>
+                </div>
             </div>
             <div class="acessorios">
-                <span>
+                <div class="product-box">
                     <img src="./images/acessorio-3.png" alt="" class="product-img">
-                </span>
-                <h3 class="product-title">Bola de vôlei</h3>
-                <p>R$ 69,90</p>
-                    <button class="add-cart">Adicionar ao carrinho</button>
+                        <h3 class="product-title">BOLA DE VOLEI</h3>
+                        <span class="price">R$ 69,90</span>
+                    <ion-icon name="bag-outline" class="add-cart"></ion-icon>
+                </div>
             </div>
             <div class="acessorios">
-                <span>
+                <div class="product-box">
                     <img src="./images/acessorio-4.png" alt="" class="product-img">
-                </span>
-                <h3 class="product-title">Bolsa da Nike</h3>
-                <p>R$ 129,90</p>
-                    <button class="add-cart">Adicionar ao carrinho</button>
+                        <h3 class="product-title">BOLSA DA NIKE</h3>
+                        <span class="price">R$ 129,90</span>
+                    <ion-icon name="bag-outline" class="add-cart"></ion-icon>
+                </div>
             </div>
             <div class="acessorios">
-                <span>
+                <div class="product-box">
                     <img src="./images/acessorio-5.png" alt="" class="product-img">
-                </span>
-                <h3 class="product-title">Boné da Nike</h3>
-                <p>R$ 69,90</p>
-                    <button class="add-cart">Adicionar ao carrinho</button>
+                        <h3 class="product-title">BONÉ DA NIKE</h3>
+                        <span class="price">R$ 69,90</span>
+                    <ion-icon name="bag-outline" class="add-cart"></ion-icon>
+                </div>
             </div>
             <div class="acessorios">
-                <span>
+                <div class="product-box">
                     <img src="./images/acessorio-6.png" alt="" class="product-img">
-                </span>
-                <h3 class="product-title">Bolsa da Adidas</h3>
-                <p>R$ 199,90</p>
-                    <button class="add-cart">Adicionar ao carrinho</button>
+                        <h3 class="product-title">BOLSA DA ADIDAS</h3>
+                        <span class="price">R$ 199,90</span>
+                    <ion-icon name="bag-outline" class="add-cart"></ion-icon>
+                </div>
             </div>
             
         </div>
