--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                 </li>
                 <ion-icon name="cart-outline" id="cart-icon"></ion-icon>
             </ul>
+            <ion-icon name="menu-outline" class="menu-hamburguer"></ion-icon>
+            
         </nav>
         <div class="cart">
             <h2 class="cart-title">Seu Carrinho</h2>
