--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
             <img src="./images/Icone_tenis_run_borda-removebg-preview.png" alt="RUNN Logo" width="100px">
         </div>
         <nav>
-            <ul class="links">
+            <div class="mobile-menu-toggle" id="mobile-menu-toggle">
+                <ion-icon name="menu-outline"></ion-icon>
+            </div>
+            <ul class="links" id="nav-links">
                 <li>
                     <a href="#esportes">Esportes</a>
                 </li>
@@ -33,10 +36,8 @@
                 <li>
                     <a href="#acessorios">Acessórios</a>
                 </li>
-                <ion-icon name="cart-outline" id="cart-icon"></ion-icon>
+                <ion-icon name="cart-outline" id="cart-icon" class="icone"></ion-icon>
             </ul>
-            <ion-icon name="menu-outline" class="menu-hamburguer"></ion-icon>
-            
         </nav>
         <div class="cart">
             <h2 class="cart-title">Seu Carrinho</h2>
